--- a/frontend/styles/css/global.css
+++ b/frontend/styles/css/global.css
@@ -371,6 +371,21 @@ select {
     color: #085c16;
     font-size: 16px; }
 
+.info-alert {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  margin-bottom: 15px;
+  border: 1px solid #a9cdec;
+  background-color: #e9f5ff; }
+  .info-alert img {
+    width: 20px;
+    height: 20px; }
+  .info-alert span {
+    margin-left: 15px;
+    color: #08445c;
+    font-size: 16px; }
+
 .button-link {
   border: 0;
   background-color: transparent;
