--- a/frontend/styles/scss/employeeAddService.scss
+++ b/frontend/styles/scss/employeeAddService.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "employeeNavigation";
-@use 'sass:math';
+@use "sass:math";
 
 main {
     width: 100%;
@@ -58,16 +58,30 @@ main {
                         flex-direction: column;
                         margin-top: 20px;
                         label {
-                            font-size: 16px;
+                            font-size: 15px;
                             padding-bottom: 10px;
                         }
                         input,
                         select {
                             width: 100%;
                             max-width: 300px;
-                            padding: 10px 5px;
+                            padding: 6px 5px;
                             background-color: #dde5ee;
                             outline: none;
+                            font-size: 14px;
+                        }
+                    }
+                    .radio-group {
+                        display: flex;
+                        align-items: center;
+                        padding: 30px 0 0;
+                        label {
+                            font-size: 15px;
+                            width: 170px;
+                            font-weight: bold;
+                        }
+                        input {
+                            margin-left: 10px;
                         }
                     }
                     button {
@@ -76,6 +90,37 @@ main {
                         padding: 10px 20px;
                         border-radius: 0 15px 15px 15px;
                         cursor: pointer;
+                    }
+                    .add-service__icon-select-label {
+                        padding: 30px 0 10px;
+                    }
+                    .add-service__icon-list {
+                        display: flex;
+                        flex-wrap: wrap;
+                        .add-service__icon-box {
+                            width: 55px;
+                            height: 55px;
+                            background-color: rgb(198, 203, 206);
+                            padding: 10px;
+                            margin: 4px;
+                            transition: 0.5s;
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: contain;
+                            }
+                            &:hover {
+                                background-color: rgb(223, 233, 238);
+                                cursor: pointer;
+                                padding: 7px;
+                            }
+                        }
+                        .add-service__icon-box--selected {
+                            background-color: rgb(155, 199, 241);
+                            &:hover {
+                                background-color: rgb(193, 215, 235);
+                            }
+                        }
                     }
                 }
             }
@@ -101,7 +146,7 @@ main {
                             align-items: center;
                             label {
                                 padding-bottom: 0px;
-                                width: 100px;
+                                width: 150px;
                                 text-align: right;
                                 padding-right: 20px;
                             }
