--- a/frontend/styles/scss/global.scss
+++ b/frontend/styles/scss/global.scss
@@ -470,6 +470,9 @@ select {
 .text-nowrap {
     white-space: nowrap;
 }
+.text-center {
+    text-align: center;
+}
 
 .text-c-blue {
     color: #072974;
