--- a/frontend/styles/css/global.css
+++ b/frontend/styles/css/global.css
@@ -399,6 +399,9 @@ select {
 .text-nowrap {
   white-space: nowrap; }
 
+.text-center {
+  text-align: center; }
+
 .text-c-blue {
   color: #072974; }
 
