--- a/frontend/styles/css/employeeAddRegistration.css
+++ b/frontend/styles/css/employeeAddRegistration.css
@@ -56,7 +56,7 @@
     #employee-nav .employee-nav__list-box {
       padding: 30px 0; } }
 
-@use 'sass:math';
+@use "sass:math";
 main {
   width: 100%;
   height: auto;
@@ -139,8 +139,9 @@ main {
             flex-wrap: wrap;
             width: 100%; }
             main #employee-add-registration .add-reg .add-reg__content .add-reg__form .date-and-time-select-row .label-input-group {
-              padding-right: 15px; }
-              main #employee-add-registration .add-reg .add-reg__content .add-reg__form .date-and-time-select-row .label-input-group select {
+              padding-right: 15px;
+              width: 100%; }
+              main #employee-add-registration .add-reg .add-reg__content .add-reg__form .date-and-time-select-row .label-input-group #date-time-select {
                 width: 100%; }
             main #employee-add-registration .add-reg .add-reg__content .add-reg__form .date-and-time-select-row .label-input-group:last-child {
               width: 100%; }
