--- a/frontend/styles/scss/employeeAddRegistration.scss
+++ b/frontend/styles/scss/employeeAddRegistration.scss
@@ -1,6 +1,6 @@
 @import "variables";
 @import "employeeNavigation";
-@use 'sass:math';
+@use "sass:math";
 
 main {
     width: 100%;
@@ -105,7 +105,8 @@ main {
                         width: 100%;
                         .label-input-group {
                             padding-right: 15px;
-                            select {
+                            width: 100%;
+                            #date-time-select {
                                 width: 100%;
                             }
                         }
